--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			<div id="communicate" class="communicate-response" style="display: inline;"></div>
 		</div>
 	</div>
+	<a href="https://app.dev.libertify.com/account">Demo deeplink</a>
 
 
 <script type="module">
