--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 	<a href="https://app.dev.libertify.com/account">Demo deeplink</a>
-	<a href="https://d1ex2h3ivnf0sn.cloudfront.net">Demo deeplink 2</a>
+	<a href="https://d1ex2h3ivnf0sn.cloudfront.net/account">Demo deeplink 2</a>
 
 
 <script type="module">
