--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body data-new-gr-c-s-check-loaded="14.1087.0" data-gr-ext-installed="">
 	<h3>
 		<div class="header-title">
-			SDK for NFC Web Client Sample
+			SDK for NFC Web Client Sample 2
 		</div>
 	</h3>
 
@@ -169,7 +169,7 @@
 			/* communicateThru(Authentication) */
 			let keyType = 'KeyA';
 			let key = new Uint8Array([0x40, 0x00, 0xAA, 0xAA, 0x40, 0x00, 0xBB, 0xBB, 0x40, 0x00, 0xCC, 0xCC, 0x40, 0x00, 0xDD, 0xDD]);
-			let blockNumber = 8;
+			let blockNumber = 16;
 			let communicationOption = new CommunicationOption(true, key, keyType, blockNumber, card.uid);
 			await lib.communicateThru(null, 0, communicationOption)
 			.then(ret => {
