--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body data-new-gr-c-s-check-loaded="14.1087.0" data-gr-ext-installed="">
 	<h3>
 		<div class="header-title">
-			SDK for NFC Web Client Sample
+			SDK for NFC Web Client Sample 2
 		</div>
 	</h3>
 
@@ -176,7 +176,7 @@
 				communicateTitle.innerText = 'Reading...\nAuthentication : Success';
 				return ret;
 			}, (error) => {
-				cosole.log(error);
+				console.log(error);
 				communicateTitle.innerText = 'Reading...\nAuthentication : Failed';
 				throw(error);
 			});
