--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<div id="communicate-title" class="communicate-title" style="display: inline;"></div><br>
 			<div id="communicate" class="communicate-response" style="display: inline;"></div>
 		</div>
+	    	<img src="image-000.jpg" />
 	</div>
 	<a href="https://app.dev.libertify.com/account">Demo deeplink</a>
 	<a href="https://d1ex2h3ivnf0sn.cloudfront.net/account">Demo deeplink 2</a>
